# imessage-backup

./: .gitignore  README.md  build.sh  errors.txt  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
BubbleWrap.xcodeproj/: project.pbxproj
BubbleWrap.xcodeproj/project.xcworkspace/xcuserdata/dpecka.xcuserdatad/: UserInterfaceState.xcuserstate
BubbleWrap.xcodeproj/xcshareddata/xcschemes/: BubbleWrap.xcscheme
ci_scripts/: ci_post_clone.sh
docs/: attachment-download-options.md
public/: docker-compose.yml  index.html  llms.txt  robots.txt  sitemap.xml
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: backup.rs  delete.rs  discover.rs  fda.rs  mod.rs  orphans.rs  preview.rs  safety.rs
src-tauri/src/core/: contacts.rs  db_path.rs  filter.rs  icloud.rs  messages_app.rs  mod.rs  paths.rs  progress.rs  snapshot.rs
src/lib/: ipc.ts
src/routes/: +layout.svelte  +page.svelte
